# blkdiscovery

./: .gitignore  README.md  pyproject.toml  setup.py
blkdiscovery/: __init__.py  blkdiscovery.py  blkdiscoveryutil.py  blkid.py  cli.py  hdparm.py  lsblk.py  lshw.py  lsstoragecntlr.py  types.py
scripts/: blkdiscovery
src/: blkdiscovery.py  hdparm.py  lsblk.py  lsstoragecntlr.py
