[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blkdiscovery"
version = "0.0.2"
description = "Finds block devices and extracts lots of details from Linux"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jared Hulbert", email = "jaredeh@gmail.com"}
]
maintainers = [
    {name = "Jared Hulbert", email = "jaredeh@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/jaredeh/blkdiscovery"
Repository = "https://github.com/jaredeh/blkdiscovery.git"
Issues = "https://github.com/jaredeh/blkdiscovery/issues"

[project.scripts]
blkdiscovery = "blkdiscovery.cli:main"

[tool.setuptools.packages.find]
include = ["blkdiscovery*"]
